[workspace]
members = [
  "contracts/cw3-fixed-multisig",
  "contracts/cw3-flex-multisig",
  "contracts/cw4-group",
# "contracts/cw4-stake",
  "packages/cw2",
  "packages/cw3",
  "packages/cw4",
  "packages/cw20",
  #"packages/multi-test",
  "packages/storage-plus",
  "packages/utils"]

[workspace.dependencies]
schemars = { version = "0.8.11" }
serde = { version = "1.0" }
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit",  default-features = false, features = ["permit", "storage"]}

[profile.release.package.cw3-fixed-multisig]
codegen-units = 1
incremental = false

[profile.release.package.cw3-flex-multisig]
codegen-units = 1
incremental = false

[profile.release.package.cw4-group]
codegen-units = 1
incremental = false

[profile.release.package.cw4-stake]
codegen-units = 1
incremental = false

[profile.release.package.cw20-base]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
